<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipCodeCoverage>false</skipCodeCoverage>
    </properties>

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.inmarsat</groupId>
    <artifactId>selenium-capabilities</artifactId>

    <packaging>jar</packaging>

    <version>0.1.${buildNumber}</version>

    <name>Selenium Capabilities Matcher</name>
    <description>Custom capabilities matcher to use within the Selenium Grid</description>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <!-- Compiler plugin for maven -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>

            <!-- Code coverage plugin -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>prepare-unit-tests</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <append>true</append>
                            <skip>${skipCodeCoverage}</skip>
                            <destFile>${project.build.directory}/coverage/jacoco-ut.exec</destFile>
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>merge-results</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>merge</goal>
                        </goals>
                        <configuration>
                            <skip>${skipCodeCoverage}</skip>
                            <fileSets>
                                <fileSet>
                                    <directory>${project.build.directory}/coverage</directory>
                                    <includes>
                                        <include>*.exec</include>
                                    </includes>
                                </fileSet>
                            </fileSets>
                            <destFile>${project.build.directory}/coverage/jacoco-aggregate-results.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-merge-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <skip>${skipCodeCoverage}</skip>
                            <dataFile>${project.build.directory}/coverage/jacoco-aggregate-results.exec</dataFile>
                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-aggregate</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Surefire plugin for TestNG -->
            <!-- Configuration set in suiteXMLFile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- surefireArgLine is injected by JaCoCo plugin, and should not be
                    defined elsewhere in the POM -->
                    <argLine>${surefireArgLine} --illegal-access=permit</argLine>
                    <suiteXmlFiles>
                        <!-- by default all test in unit-test-suite are tests using mocks -->
                        <suiteXmlFile>src/test/resources/unit-test-suite.xml</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <!-- Dependency needed to extend the Selenium Grid -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
        </dependency>

        <!-- TestNG dependency -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Selenium WebDriver dependency -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
        </dependency>

        <!-- Appium libraries for webdriver -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>

        <dependencies>
            <!-- Dependency needed to extend the Selenium Grid -->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-server</artifactId>
                <version>3.141.59</version>
            </dependency>

            <!-- TestNG dependency -->
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>7.7.0</version>
            </dependency>

            <!-- Selenium WebDriver dependency -->
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>3.141.59</version>
            </dependency>

            <!-- Appium libraries for webdriver -->
            <dependency>
                <groupId>io.appium</groupId>
                <artifactId>java-client</artifactId>
                <version>7.0.0</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
</project>
